# onerm

./: Cargo.toml  Dioxus.toml  README.md  index.html
assets/: manifest.json  sw.js
docs/: index.html
docs/assets/: apple-touch-icon.png.br  chota.min.css  chota.min.css.br  favicon-16x16.png.br  favicon-32x32.png.br  logo_192.png.br  manifest.json  onerm-30d0e7231d8fc192.js.br  onerm-769a6539e2cfa293.js.br  onerm-d05305aff6579fb6.js  onerm-dcf923d576e1ab09.js  onerm_bg-82da7ea6ca2de9da.wasm  onerm_bg-82da7ea6ca2de9da.wasm.br  onerm_bg-a3f5beb0a9d449c9.wasm.br  onerm_bg-cc7570d1baf24432.wasm  onerm_bg-cc7570d1baf24432.wasm.br  sw.js  sw.js.br
docs/wasm/: onerm.d.ts  onerm.d.ts.br  onerm.js  onerm.js.br  onerm_bg.wasm  onerm_bg.wasm.br  onerm_bg.wasm.d.ts  onerm_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
public/: index.html
public/assets/: chota.min.css  favicon.ico.br  logo_512.png.br  manifest.json.br  onerm-30d0e7231d8fc192.js  onerm-769a6539e2cfa293.js  onerm-d05305aff6579fb6.js.br  onerm-dcf923d576e1ab09.js.br  onerm_bg-6e3e933e2186b5b7.wasm  onerm_bg-6e3e933e2186b5b7.wasm.br  onerm_bg-89e9a8d4326b1b49.wasm  onerm_bg-89e9a8d4326b1b49.wasm.br  onerm_bg-a3f5beb0a9d449c9.wasm  sw.js  sw.js.br
src/: main.rs
static/: index.html
